2021-01-10  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cmap_read.c, t1_load.c: Fix a bug causing a segfault
	reported as dvipdfmx-upjf.test test failure. Add missing size
	tests for the data comparison.

2021-01-09  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c, cidtype2.c, pdffont.[ch], type0.c: Fix a bug
	that vertical metrics are not written. Introduced in rev.56400.
	* configure.ac: Version 20210109.

2020-12-16  Karl Berry  <karl@freefriends.org>

	* dvipdfmx.c (show_usage): -f loads an additional map file,
	does not omit loading of default map(s).
	https://tug.org/pipermail/dvipdfmx/2020-December/000146.html

2020-12-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Fix a bug introduced in rev.56265: When the
	resource dictionary (of some resource category) is an indirect
	object and then pdf:put operation is done against that
	resource category, the operation fails. Now this situation is
	taken into account. (The content of old resource is merged
	into new one).
	* configure.ac: Version 20201216.

2020-12-14  Akira Kakuto  <kakuto@w32tex.org>

	* pkfont.c: Fix an incorrect argument for mktexpk.
	https://tug.org/pipermail/dvipdfmx/2020-December/000142.html.
	* configure.ac: Version 20201214.

2020-11-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_html.c: Fix a bug that html-special was not working
	after the changes introduced in rev.55722 (pdf:bann accepts a
	reference ID).
	* type0.c: Add pseudo-unique tag to ToUnicode CMap name again.
	* configure.ac: Version 20201111.

2020-10-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfximage.c: Fix a bug that mps images are not reused when
	they are included multiple times. Bug introduced by "Forward
	reference" support added on 2020-07-21.
	* configure.ac: Version 20201031.

2020-10-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype0.c: Fix a bug that the conditional for deciding if